re PR fortran/17708 (gfortran problem with goto inside loop)

fortran/
PR fortran/17708
* parse.c (accept_statement): Don't treat END DO like END IF and
END SELECT.
(parse_do_block): Generate possible END DO label inside END DO
block.

also, added ChangeLog entry for previous commit.

testsuite/
PR fortran/17708
* gfortran.dg/pr17708.f90: New test.

From-SVN: r88529